# errorCalculator

src/: CMakeLists.txt  Config.cpp  Config.h  Function.cpp  Function.h  FunctionModel.cpp  FunctionModel.h  FunctionProcessor.cpp  FunctionProcessor.h  FunctionResultsModel.cpp  FunctionResultsModel.h  GlobalSignalHandler.cpp  GlobalSignalHandler.h  MainWindow.cpp  MainWindow.h  Measurement.cpp  Measurement.h  MeasurementModel.cpp  MeasurementModel.h  MeasurementProcessor.cpp  MeasurementProcessor.h  MeasurementResultsModel.cpp  MeasurementResultsModel.h  ResultsWidget.cpp  ResultsWidget.h  Variable.cpp  Variable.h  VariableModel.cpp  VariableModel.h  db.cpp  db.h  dbMacros.h  main.cpp  run  stats.h
src/mathParser/: CMakeLists.txt  MathExp.cpp  MathExp.h  Token.cpp  Token.h  funcs.h
